--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <meta property="og:title" content="Aditya" />
   <meta property="og:description" content="Aditya&#39;s personal website" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://www.example.com/" />
+  <meta property="og:url" content="https://aaadix.pages.dev/" />
 
 
 
-  <title>Aditya</title>
+  <title>Aditya - Personal Website</title>
 
 
-  <link rel="canonical" href="http://www.example.com/">
+  <link rel="canonical" href="https://aaadix.pages.dev/">
 
 
   <link rel="preload" href="/fonts/forkawesome-webfont.woff2?v=1.2.0" as="font" type="font/woff2" crossorigin>
