--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
   <meta name="author" content="Aditya">
-  <meta name="description" content="Aditya&#39;s personal website">
+  <meta name="description" content="Aditya&#39;s Hi There, This is Aditya, I am a Student and a passionate part time developer. I live in India, Visit This Site to Know More about me.">
   <meta name="keywords" content="blog,developer,personal">
 
   <meta name="twitter:card" content="summary" />
