--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
             <li>
-              <a href="https://instagram.com/aaadix_/" aria-label="instagram">
+              <a href="https://instagram.com/_adx69/" aria-label="instagram">
                 <i class="fa fa-2x fa-instagram" aria-hidden="true"></i>
               </a>
             </li>
@@ -114,7 +114,7 @@
 
 
             <li>
-              <a href="https://telegram.dog/aaadix" aria-label="Telegram">
+              <a href="https://telegram.dog/adx69" aria-label="Telegram">
                 <i class="fa fa-2x fa-telegram" aria-hidden="true"></i>
               </a>
             </li>
@@ -123,7 +123,7 @@
 
             
             <li>
-              <a href="https://twitter.com/aaadix_/" aria-label="Twitter">
+              <a href="https://twitter.com/_adx69/" aria-label="Twitter">
                 <i class="fa fa-2x fa-twitter" aria-hidden="true"></i>
               </a>
             </li>
@@ -132,7 +132,7 @@
 
 
             <li>
-              <a href="https://github.com/aaadix/" aria-label="Github">
+              <a href="https://github.com/adx69/" aria-label="Github">
                 <i class="fa fa-2x fa-github" aria-hidden="true"></i>
               </a>
             </li>
